--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   
 <!-- Sekcja z treścią - START -->
 
-  <div class="section">
-    <div class="header">O mnie</div>
-    <div class="content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</div>
+  <section>
+    <h1>O mnie</h1>
+    <article class="content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</article>
     
-    <div class="content">Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe</div>  
-  </div>
+    <article class="content">Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe</article>  
+    </section>
   
 <!-- Sekcja z treścią - STOP -->
 
