--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <!--Menu główne - START -->
  
-  <div id="menu">
+  <nav id="menu">
     <ul>
         <li class="menu__item"><a href="#">Home</a></li>
         <li class="menu__item"><a href="#about">O mnie</a></li>
         <li class="menu__item"><a href="#contact">Kontakt</a></li>
       </ul>
-  </div>
+  </nav>
   
 <!--Menu główne - STOP -->
 
@@ -25,7 +25,7 @@
  
   <header class="header header--main">
     <img src="img/header-background.jpg" alt="Zdjęcie nagłówkowe">
-    <div class="header__title--main">Moja własna strona</div>
+    <h1 class="header__title--main">Moja własna strona</h1>
     </header>
   
 <!-- Nagłówek strony - STOP -->
