zmiany z h1 na h2, dodanie address

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <!-- Sekcja z treścią - START -->
 
   <section>
-    <h1>O mnie</h1>
-    <article class="content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</article>
+    <h2>O mnie</h2>
+    <p class="content">Front-end developer i project manager. Odpowiadał za realizację wielu projektów webowych dla klientów w Polski i zagranicy. Występował jako prelegent na spotkaniach WordUp, gdzie opowiadał o możliwościach systemu WordPress CMS przy tworzeniu stron internetowych.</p>
     
-    <article class="content">Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe</article>  
+    <p class="content">Uważa, że każdy może zostać programistą, dlatego prowadzi warsztaty na uczelniach wyższych oraz w ramach projektu Codevenig, na których pokazuje jak funkcjonują współczesne strony internetowe</p>  
     </section>
   
 <!-- Sekcja z treścią - STOP -->
@@ -46,13 +46,13 @@
 <!-- Stopka adresowa - START -->
  
   <footer class="contact">
-    <h1 class="header contact__header">Kontakt</h1>
-    <article class="contact__content">
+    <h2 class="header contact__header">Kontakt</h2>
+    <address class="contact__content">
       Łukasz Badocha<br /> 
       ul. Mostowa 6/13<br /> 
       31-061 Kraków<br />
       <a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
-    </article>
+    </address>
   </footer>
   
 <!-- Stopka adresowa - STOP -->
